# rsmath

./: README.md  ndiff_conf.txt  pyproject.toml  setup.py  u_and_f_vals_actual.txt  u_and_f_vals_ndiff.out
docs/: index.rst
rsmath/: __init__.py  lct.py  lct_lib.py  rsmath_console.py
tests/: import_test.py  lct_test.py
tests/lct_data/: 2d_sep_expect_out0.txt  2d_sep_expect_out1.txt  2d_sep_in.txt  another.txt  cm_signals.ndiff  fourier.ndiff  json_inputs.json  json_inputs0.json  json_inputs1.json  lct.txt  lct_abscissae_outputs.txt  lct_decomp.txt  scaled_signals.txt  signals.txt  u_and_f_vals.txt
tests/lct_data/2.out/: signals.txt
tests/lct_data/signals.out/: signals.ndiff
