[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "pykern",
]
description = "A library for common mathematical functions and constants"
dynamic = ["version"]
name = "rsmath"
readme = "README.md"

[project.scripts]
rsmath = "rsmath.rsmath_console:main"

[project.urls]
Homepage = "https://git.radiasoft.org/rsmath"

[tool.setuptools.package-data]
rsmath = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["rsmath*"]
